# ai-investment-assistant

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  mise.toml  package.json
agent/: README.md  main.py  pyproject.toml
agent/agent_tools/: deepseek.py  get_weather.py
agent/app/: config.py  server.py
agent/controller/: chat.py  chat_conversations.py
agent/core/: checkpointer.py  database.py  rabbitmq.py
agent/middleware/: file_system_middleware.py
agent/migrations/: env.py
agent/model/: agent_run.py  agent_run_event.py  approval.py  conversation.py  message.py  message_part.py  outbox_event.py  tool_invocation.py
agent/provider/: deepseek.py
agent/repository/: agent_run.py  agent_run_event.py  approval.py  conversation.py  message.py  message_part.py  outbox_event.py  tool_invocation.py
agent/schema/: chat.py  chat_conversations.py  context.py
agent/service/: agent_factory.py  approval.py  chat.py  chat_conversations.py  chat_run.py  run_events.py  stream_projection.py
agent/tests/: test_agent_factory.py  test_approval_api.py  test_approval_interrupt.py  test_approval_service.py  test_approval_timeout.py  test_chat_controller.py  test_chat_conversations.py  test_chat_run_service.py  test_chat_stream.py  test_command_consumer.py  test_deepseek_provider.py  test_deepseek_tools.py  test_hitl_models.py  test_hitl_schemas.py  test_message_model.py  test_outbox_publisher.py  test_question_answer_graph.py  test_run_event_stream.py  test_run_executor.py  test_server_stream.py  test_weather_tool.py  test_worker_entrypoints.py
agent/worker/: __init__.py  command_consumer.py  main.py  outbox_publisher.py  run_executor.py
agent_claude/: alembic.ini  main.py  pyproject.toml
agent_claude/controller/: chat.py
agent_claude/core/: config.py  database.py
agent_claude/migrations/: env.py
agent_claude/model/: agent_run.py  agent_run_event.py  agent_session.py  approval.py  (+5 more)
(+299 files in other folders)
