[project]
name = "ai-investment-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "grpcio>=1.76.0",
  "grpcio-tools>=1.76.0",
  "httpx>=0.28.1",
  "langgraph>=1.0.4",
  "pydantic>=2.12.0",
  "protobuf>=6.31.1,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "app/gen"]
testpaths = ["tests"]
