[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.8",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
