[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5,<10",
    "alembic>=1.18.4",
    "deepagents>=0.6.8",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "langchain>=1.3.4",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.2.2",
    "langgraph-checkpoint-postgres>=3,<4",
    "langsmith[openai-agents]>=0.8.9",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
