[project]
name = "agent-claude"
version = "0.1.0"
description = "Standalone Claude Agent SDK backend compatible with current chat frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "claude-agent-sdk==0.2.91",
    "fastapi>=0.136.3",
    "greenlet>=3.3.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[tool.uv]
package = false
